--- a/index.html
+++ b/index.html
@@ -14,10 +14,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
 </head>
 
+<div id="stars"></div>
+<div id="stars2"></div>
+<div id="stars3"></div>
+
 <body>
 
 <!--Cartrel de seleccion de color-->
-
 
 <img src="./Pez.png" id="logo">
 
