--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <img src="./Pez.png" id="logo">
 
 <div id="grid">
-    <button class="cartelIn">
+    <button class="cartelIn" onclick="but1()">
         <img src="./instagram.png" class="boxColor">
     </button>
     <button class="cartelIn">
