--- a/index.html
+++ b/index.html
@@ -22,13 +22,14 @@
 
 <!--Cartrel de seleccion de color-->
 
+
 <img src="./Pez.png" id="logo">
 
 <div id="grid">
-    <button class="cartelIn" onclick="but1()">
+    <button class="cartelIn" target="_blank" onclick="window.location.href='https://www.instagram.com/brutusverde/?hl=es';" >
         <img src="./instagram.png" class="boxColor">
     </button>
-    <button class="cartelIn">
+    <button class="cartelIn" onclick="window.location.href='https://api.whatsapp.com/send?phone=34601035291';" >
         <img src="./whatsapp.png" class="boxColor">
     </button>
     <button class="cartelIn">
