--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
 <meta charset="UTF-8">
 
 <html lang="es">
-<link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
 
+    <link href="http://fonts.cdnfonts.com/css/wandertucker" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200&display=swap" rel="stylesheet">
 <head>
     <link rel="stylesheet" href="CSS.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
@@ -22,8 +24,9 @@
 
 <!--Cartrel de seleccion de color-->
 
-
 <img src="./Pez.png" id="logo">
+
+<div class="neon"><h2>Brutus</h2></div>
 
 <div id="grid">
     <button class="cartelIn" target="_blank" onclick="window.location.href='https://www.instagram.com/brutusverde/?hl=es';" >
