--- a/index.html
+++ b/index.html
@@ -5,8 +5,13 @@
 <!DOCTYPE html>
 <meta charset="UTF-8">
 
+
+<style>
+    @import url('http://fonts.cdnfonts.com/css/wandertucker');
+    </style>
+
 <html lang="es">
-    
+
     <link href="http://fonts.cdnfonts.com/css/wandertucker" rel="stylesheet">
 <head>
     <link rel="stylesheet" href="CSS.css">
