--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 <meta charset="UTF-8">
 
 
-<style>
-    @import url('http://fonts.cdnfonts.com/css/wandertucker');
-    </style>
-
 <html lang="es">
 
-    <link href="http://fonts.cdnfonts.com/css/wandertucker" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Courgette&family=Nunito:wght@200&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Yellowtail&display=swap" rel="stylesheet">
 <head>
     <link rel="stylesheet" href="CSS.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
@@ -31,17 +31,22 @@
 <div class="neon"><h2>Brutus</h2></div>
 
 <div id="grid">
-    <button class="cartelIn" target="_blank" onclick="window.location.href='https://www.instagram.com/brutusverde/?hl=es';" >
-        <img src="./instagram.png" class="boxColor">
-    </button>
-    <button class="cartelIn" onclick="window.location.href='https://api.whatsapp.com/send?phone=34601035291';" >
-        <img src="./whatsapp.png" class="boxColor">
-    </button>
-    <button class="cartelIn">
-        <img src="./Pez.png" class="boxColor">
-    </button>
+    <div>
+        <button class="cartelIn" target="_blank" onclick="window.location.href='https://www.instagram.com/brutusverde/?hl=es';" >
+            <img src="./instagram.png" class="boxColor">
+        </button>
+    </div>
 
-    
+    <div>
+        <button class="cartelIn" onclick="window.location.href='https://api.whatsapp.com/send?phone=34601035291';" >
+            <img src="./whatsapp.png" class="boxColor">
+        </button>
+    </div>
+    <div>
+        <button class="cartelIn">
+            <img src="./Pez.png" class="boxColor">
+        </button>
+    </div> 
 </div>
 
 <!--////////////////////////////////////////////////////////////////////////////-->
