--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
         </button>
     </div>
     <div>
-        <button class="cartelIn">
-            <img src="./Pez.png" class="boxColor">
+        <button class="cartelIn" onclick="window.location.href='https://discord.gg/Fjbu8hdtdU';">
+            <img src="./disc.png" class="boxColor">
         </button>
     </div> 
 </div>
